--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,11 @@
-/* body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
-}
+@import url("https://fonts.googleapis.com/css?family=Permanent+Marker");
 
-ol,
-ul {
-  padding-left: 30px;
-}
-
-.board-row:after {
-  clear: both;
-  content: "";
-  display: table;
-}
-
-.status {
-  margin-bottom: 10px;
-}
-
-.square {
-  background: #fff;
-  border: 1px solid #999;
-  float: left;
-  font-size: 24px;
-  font-weight: bold;
-  line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 34px;
-}
-
-.square:focus {
-  outline: none;
-}
-
-.kbd-navigation .square:focus {
-  background: #ddd;
-}
-
-.game {
-  display: flex;
-  flex-direction: row;
-}
-
-.game-info {
-  margin-left: 20px;
-} */
 .board {
   border: solid 3px black;
-  height: 350px;
-  width: 350px;
+  height: 312px;
+  width: 312px;
   text-align: center;
-
+  margin: 0 auto;
   display: inline-flex;
   flex-wrap: wrap;
 }
@@ -67,4 +18,6 @@ ul {
   padding: 0;
 }
 .title {
+  font-family: "Permanent Marker", cursive;
+  color: #ffa500;
 }
